--- a/04_livrable/website/punr/index.html
+++ b/04_livrable/website/punr/index.html
@@ -3,7 +3,7 @@
 <html xmlns:tei="http://www.tei-c.org/ns/1.0">
    <head>
       <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-      <title>Pour un nouveau roman, accueil</title>
+      <title>Pour un nouveau roman, index</title>
       <link rel="stylesheet" type="text/css" href="punr_style.css">
       <link rel="icon" type="image/jpg" href="">
       <meta charset="utf-8">
@@ -39,18 +39,6 @@
          </nav>
          <div class="legals"><a href="" target="blanck"><img src="img/GitHub-Mark-32px.png"></a><a rel="license" href="http://creativecommons.org/licenses/by/4.0/" target="blanck"><img alt="Licence Creative Commons" src="https://creativecommons.org/images/chooser/chooser_cc.png"></a><a rel="license" href="http://creativecommons.org/licenses/by/4.0/" target="blanck"><img alt="Licence Creative Commons" src="https://creativecommons.org/images/chooser/chooser_by.png"></a></div>
       </header>
-      <article>Encodage de Pour un nouveau roman publié en 1963 par Alain Robbe-Grillet, produit
-         par Adrien Mével en vu de produire une édition numérique de cette œuvre dans le cadre
-         d'un travail de recherche encadré par Mme&nbsp;Florence&nbsp;de&nbsp;Chalonge et M.&nbsp;Matthieu&nbsp;Marchal,
-         effectué en Master 2 Éditions Numériques et Imprimées de Textes Littéraires, à l'Université
-         de Lille, année universitaire 2022-2023.Le présent travail contient le texte de Pour un nouveau roman et quelques-uns de ses
-         référents transtextuels ainsi que des variantes issus des premières publications des
-         articles composant le recueil.Publication InformationEncodage des extraits cités dans Pour un nouveau roman.
-         Publication InformationEncodage de Pour un nouveau roman publié en 1963 par Alain Robbe-Grillet, produit
-         par Adrien Mével en vu de produire une édition numérique de cette œuvre dans le cadre
-         d'un travail de recherche encadré par Mme&nbsp;Florence&nbsp;de&nbsp;Chalonge et M.&nbsp;Matthieu&nbsp;Marchal,
-         effectué en Master 2 Éditions Numériques et Imprimées de Textes Littéraires, à l'Université
-         de Lille, année universitaire 2022-2023.</article>
       <footer><a href="https://www.univ-lille.fr/" target="blanck"><img src="img/logo_u_lille.png" alt="logo université de lille">"</a></footer>
    </body>
 </html>
