--- a/04_livrable/website/punr/punr_ch02.html
+++ b/04_livrable/website/punr/punr_ch02.html
@@ -9,9 +9,7 @@
       <meta charset="utf-8">
       <meta name="author" content="adrien mevel, mathieu marchal, florence de chalonge, alain robbe-grillet">
       <meta name="description" content="digital critical edition of pour un nouveau roman by alain robbe-grillet fist published in 1963 this word has been realised as student project">
-      <meta name="keywords" content="critical, edition, digital, robbe-grillet, litterature, french, 1963, nouveau roman, alain robbe-grillet, pour un nouveau roman, xxe siecle, xx, franch theory">
-      <link rel="javascript" src="punr_script.js">
-   </head>
+      <meta name="keywords" content="critical, edition, digital, robbe-grillet, litterature, french, 1963, nouveau roman, alain robbe-grillet, pour un nouveau roman, xxe siecle, xx, franch theory"><script src="script.js"></script></head>
    <body>
       <header id="top">
          <h1>Pour un nouveau roman</h1>
@@ -51,11 +49,11 @@
             n’ont abouti, au mieux, qu’à des œuvres isolées. Et –&nbsp;on nous le répète&nbsp;–&nbsp;aucune de
             ces œuvres, quel qu’en fût l’intérêt, n’a emporté l’adhésion d’un public comparable
             à celui du roman bourgeois. La seule conception romanesque qui ait cours aujourd’hui
-            est, en fait, celle de <span style="color:#0f0;">Balzac</span>.</p>
+            est, en fait, celle de <span class="ref">Balzac</span>.</p>
          <p>Sans mal on pourrait même remonter jusqu’à madame de La Fayette. La sacro-sainte analyse
             psychologique constituait, déjà à cette époque, la base de toute prose&nbsp;: c’est elle
             qui présidait à la conception du livre, à la peinture des personnages, au déroulement
-            de l’intrigue. Un <span style="color:#f00;">«&nbsp;bon&nbsp;»</span> roman, depuis lors, est resté l’étude d’une passion&nbsp;–&nbsp;ou d’un conflit de passions,
+            de l’intrigue. Un <span class="quote" onclick="displayExtract('toDefine')">«&nbsp;bon&nbsp;»</span> roman, depuis lors, est resté l’étude d’une passion&nbsp;–&nbsp;ou d’un conflit de passions,
             ou d’une absence de passion&nbsp;–&nbsp;dans un milieu donné. La plupart de nos romanciers contemporains du type traditionnel&nbsp;–&nbsp;c’est-à-dire
             ceux qui justement recueillent l’approbation des consommateurs&nbsp;–&nbsp;pourraient recopier
             de longs passages de <span class="STDitalic">La Princesse de Clèves</span> ou du <span class="STDitalic">Père Goriot</span> sans éveiller les soupçons du vaste public qui dévore leur production. À peine y
@@ -68,13 +66,13 @@
             peu à peu, si les techniques industrielles ont fait des progrès considérables, notre
             civilisation mentale, elle, est bien restée la même. Nous vivons pratiquement sur
             les mêmes habitudes et les mêmes interdits, moraux, alimentaires, religieux, sexuels,
-            hygiéniques, familiaux, etc. Enfin, il y a le <span style="color:#f00;">«&nbsp;cœur&nbsp;»</span> humain qui&nbsp;–&nbsp;c’est bien connu&nbsp;–&nbsp;est éternel. Tout est dit et l’on vient trop tard,
+            hygiéniques, familiaux, etc. Enfin, il y a le <span class="quote" onclick="displayExtract('toDefine')">«&nbsp;cœur&nbsp;»</span> humain qui&nbsp;–&nbsp;c’est bien connu&nbsp;–&nbsp;est éternel. Tout est dit et l’on vient trop tard,
             etc., etc.</p>
          <p>Le risque de telles rebuffades s’accroît encore si l’on ose prétendre que cette littérature
             nouvelle, non seulement est désormais possible, mais est en train déjà de voir le
             jour, et qu’elle va représenter&nbsp;–&nbsp;en s’accomplissant&nbsp;–&nbsp;une révolution plus totale
             que celles d’où naquirent, jadis, le romantisme ou le naturalisme.</p>
-         <p>Il y a forcément du ridicule dans une pareille promesse&nbsp;: <span style="color:#f00;">«&nbsp;Maintenant les choses vont changer&nbsp;!&nbsp;»</span>Comment feraient-elles pour changer&nbsp;? Vers quoi iraient-elles&nbsp;? Et, surtout, pourquoi
+         <p>Il y a forcément du ridicule dans une pareille promesse&nbsp;: <span class="quote" onclick="displayExtract('toDefine')">«&nbsp;Maintenant les choses vont changer&nbsp;!&nbsp;»</span>Comment feraient-elles pour changer&nbsp;? Vers quoi iraient-elles&nbsp;? Et, surtout, pourquoi
             maintenant&nbsp;?</p>
          <p>Devant l’art romanesque actuel, cependant, la lassitude est si grande&nbsp;–&nbsp;enregistrée
             et commentée par l’ensemble de la critique&nbsp;–&nbsp;qu’on imagine mal que cet art puisse
@@ -82,6 +80,7 @@
             de beaucoup est simple&nbsp;: ce changement est impossible, l’art romanesque est en train
             de mourir. Cela n’est pas certain. L’histoire dira, dans quelques dizaines d’années,
             si les divers sursauts que l’on enregistre sont des signes de l’agonie, ou du renouveau.</p>
+         <div class="smallgap"></div>
          <p>De toute façon, il ne faudrait pas se faire d’illusions sur les difficultés d’un bouleversement
             de ce genre. Elles sont considérables. Toute l’organisation littéraire en place (depuis
             l’éditeur jusqu’au plus modeste lecteur, en passant par le libraire et le critique)
@@ -90,7 +89,7 @@
             prêts à reconnaître la valeur d’une recherche, restent malgré tout les héritiers d’une
             tradition. Or, inconsciemment jugée par référence aux formes consacrées, une forme
             nouvelle paraîtra toujours plus ou moins une absence de forme. Ne lit-on pas, dans
-            un de nos plus célèbres dictionnaires encyclopédiques, à l’article <span style="color:#0f0;">Schönberg</span>&nbsp;: <span style="color:#f00;">«&nbsp;Auteur d’œuvres audacieuses, sans souci d’aucune règle&nbsp;»</span>&nbsp;! Ce bref jugement se trouve sous la rubrique <span class="STDitalic">Musique</span>, évidemment rédigée par un spécialiste.</p>
+            un de nos plus célèbres dictionnaires encyclopédiques, à l’article <span class="ref">Schönberg</span>&nbsp;: <span class="quote" onclick="displayExtract('toDefine')">«&nbsp;Auteur d’œuvres audacieuses, sans souci d’aucune règle&nbsp;»</span>&nbsp;! Ce bref jugement se trouve sous la rubrique <span class="STDitalic">Musique</span>, évidemment rédigée par un spécialiste.</p>
          <p>Le nouveau-né balbutiant sera toujours considéré comme un monstre, même par ceux que
             l’expérience passionne. Il y aura de la curiosité, des mouvements d’intérêt, des réserves
             quant à l’avenir. Parmi les louanges sincères, la plupart s’adresseront aux vestiges
@@ -106,6 +105,7 @@
             de les avoir cultivés avec tant de zèle.</p>
          <p>Ainsi les spécialistes du roman (romanciers ou critiques, ou lecteurs trop assidus)
             seront sans doute ceux qui éprouveront les plus grandes peines à se dégager de l’ornière.</p>
+         <div class="smallgap"></div>
          <p>Déjà l’observateur le moins conditionné ne parvient pas à voir le monde qui l’entoure
             avec des yeux libres. Précisons tout de suite qu’il ne s’agit pas, ici, du naïf souci
             d’objectivité, dont les analyseurs de l’âme (subjective) ont beau jeu de sourire.
@@ -115,8 +115,8 @@
             s’ajouter aux choses, leur donnant un aspect moins étranger, plus compréhensible,
             plus rassurant. Parfois le camouflage est complet&nbsp;: un geste s’efface de notre esprit
             au profit des émotions supposées qui lui auraient donné naissance, nous retenons qu’un
-            paysage est <span style="color:#f00;">«&nbsp;austère&nbsp;»</span> ou <span style="color:#f00;">«&nbsp;calme&nbsp;»</span> sans pouvoir en citer aucune ligne, aucun des éléments principaux. Même si nous pensons
-            aussitôt&nbsp;: <span style="color:#f00;">«&nbsp;C’est de la littérature&nbsp;»</span>, nous n’essayons pas de nous révolter. Nous sommes habitués à ce que cette littérature
+            paysage est <span class="quote" onclick="displayExtract('toDefine')">«&nbsp;austère&nbsp;»</span> ou <span class="quote" onclick="displayExtract('toDefine')">«&nbsp;calme&nbsp;»</span> sans pouvoir en citer aucune ligne, aucun des éléments principaux. Même si nous pensons
+            aussitôt&nbsp;: <span class="quote" onclick="displayExtract('toDefine')">«&nbsp;C’est de la littérature&nbsp;»</span>, nous n’essayons pas de nous révolter. Nous sommes habitués à ce que cette littérature
             (le mot est devenu péjoratif) fonctionne comme une grille, munie de verres diversement
             colorés, qui décompose notre champ de perception en petits carreaux assimilables.</p>
          <p>Et si quelque chose résiste à cette appropriation systématique, si un élément du monde
@@ -130,6 +130,7 @@
             semblant d’être venus à bout. Autour de nous, défiant la meute de nos adjectifs animistes ou ménagers, les choses <span class="STDitalic">sont là.</span> Leur surface est nette et lisse, intacte, sans éclat louche ni transparence. Toute
             notre littérature n’a pas encore réussi à en entamer le plus petit coin, à en amollir
             la moindre courbe.</p>
+         <div class="smallgap"></div>
          <p>Les innombrables romans filmés qui encombrent nos écrans nous offrent l’occasion de
             revivre à volonté cette curieuse expérience. Le cinéma, héritier lui aussi de la tradition
             psychologique et naturaliste, n’a le plus fréquemment pour but que de transposer un
@@ -156,7 +157,8 @@
             plans) contribuaient à nous libérer de nos propres conventions. L’aspect un peu inhabituel
             de ce monde reproduit nous révèle, en même temps, le caractère <span class="STDitalic">inhabituel</span> du monde qui nous entoure&nbsp;: inhabituel, lui aussi, dans la mesure où il refuse de
             se plier à nos habitudes d’appréhension et à notre ordre.</p>
-         <p>À la place de cet univers des <span style="color:#f00;">«&nbsp;significations&nbsp;»</span> (psychologiques, sociales, fonctionnelles), il faudrait donc essayer de construire
+         <div class="smallgap"></div>
+         <p>À la place de cet univers des <span class="quote" onclick="displayExtract('toDefine')">«&nbsp;significations&nbsp;»</span> (psychologiques, sociales, fonctionnelles), il faudrait donc essayer de construire
             un monde plus solide, plus immédiat. Que ce soit d’abord par leur <span class="STDitalic">présence</span> que les objets et les gestes s’imposent, et que cette présence continue ensuite à
             dominer, par-dessus toute théorie explicative qui tenterait de les enfermer dans un
             quelconque système de référence, sentimental, sociologique, freudien, métaphysique,
@@ -168,7 +170,7 @@
             rejeter cet auxiliaire gênant dans l’oubli, dans les ténèbres.</p>
          <p>Désormais, au contraire, les objets peu à peu perdront leur inconstance et leurs secrets,
             renonceront à leur faux mystère, à cette intériorité suspecte qu’un essayiste a nommée
-            <span style="color:#f00;">«&nbsp;le cœur romantique des choses&nbsp;»</span>. Celles-ci ne seront plus le vague reflet de l’âme vague du héros, l’image de ses
+            <span class="quote" onclick="displayExtract('toDefine')">«&nbsp;le cœur romantique des choses&nbsp;»</span>. Celles-ci ne seront plus le vague reflet de l’âme vague du héros, l’image de ses
             tourments, l’ombre de ses désirs. Ou plutôt, s’il arrive encore aux choses de servir
             un instant de support aux passions humaines, ce ne sera que temporairement, et elles
             n’accepteront la tyrannie des significations qu’en apparence –&nbsp;comme par dérision&nbsp;–&nbsp;pour
@@ -181,6 +183,7 @@
             que l’auteur propose, rejeté sans cesse dans un <span class="STDitalic">ailleurs</span> immatériel et instable, toujours plus lointain, toujours plus flou, le héros futur
             au contraire demeurera là. Et ce sont les commentaires qui resteront ailleurs&nbsp;; en face de sa présence irréfutable, ils apparaîtront comme inutiles,
             superflus, voire malhonnêtes.</p>
+         <div class="smallgap"></div>
          <p>Les pièces à conviction du drame policier nous donnent, paradoxalement, une assez
             juste image de cette situation. Les éléments recueillis par les inspecteurs&nbsp;–&nbsp;objet
             abandonné sur les lieux du crime, mouvement fixé sur une photographie, phrase entendue
@@ -200,13 +203,14 @@
             ce n’était là que simplification illusoire&nbsp;; et loin de s’en trouver plus clair, plus proche, le monde y a seulement perdu
             peu à peu toute vie. Puisque c’est avant tout dans sa présence que réside sa réalité,
             il s’agit donc, maintenant, de bâtir une littérature qui en rende compte.</p>
+         <div class="smallgap"></div>
          <p>Tout cela semblerait peut-être bien théorique, bien illusoire, si précisément quelque
             chose n’était en train de changer&nbsp;–&nbsp;et même d’une façon totale, sans doute définitive&nbsp;–&nbsp;dans
             les rapports que nous entretenons avec l’univers. Aussi entrevoyons-nous la réponse
-            à cette question pleine d’ironie&nbsp;: <span style="color:#f00;">«&nbsp;Pourquoi maintenant&nbsp;?&nbsp;»</span> Il y a aujourd’hui, en effet, un élément nouveau, qui nous sépare cette fois radicalement
-            de <span style="color:#0f0;">Balzac</span>, comme de <span style="color:#0f0;">Gide</span> ou de madame de La Fayette&nbsp;: c’est la destitution des vieux mythes de la <span style="color:#f00;">«&nbsp;profondeur&nbsp;»</span>.</p>
+            à cette question pleine d’ironie&nbsp;: <span class="quote" onclick="displayExtract('toDefine')">«&nbsp;Pourquoi maintenant&nbsp;?&nbsp;»</span> Il y a aujourd’hui, en effet, un élément nouveau, qui nous sépare cette fois radicalement
+            de <span class="ref">Balzac</span>, comme de <span class="ref">Gide</span> ou de madame de La Fayette&nbsp;: c’est la destitution des vieux mythes de la <span class="quote" onclick="displayExtract('toDefine')">«&nbsp;profondeur&nbsp;»</span>.</p>
          <p>On sait que toute la littérature romanesque reposait sur eux, sur eux seuls. Le rôle
-            de l’écrivain consistait traditionnellement à creuser dans la <span style="color:#0f0;">Nature</span>, à l’approfondir, pour atteindre des couches de plus en plus intimes et finir par
+            de l’écrivain consistait traditionnellement à creuser dans la <span class="ref">Nature</span>, à l’approfondir, pour atteindre des couches de plus en plus intimes et finir par
             mettre au jour quelque bribe d’un secret troublant. Descendu dans l’abîme des passions
             humaines, il envoyait au monde tranquille en apparence (celui de la surface) des messages
             de victoire décrivant les mystères qu’il avait touchés du doigt. Et le vertige sacré
@@ -220,14 +224,42 @@
          <p>La révolution qui s’est accomplie est de taille&nbsp;: non seulement nous ne considérons
             plus le monde comme notre bien, notre propriété privée, calquée sur nos besoins et
             domesticable, mais par surcroît nous ne croyons plus à cette profondeur. Tandis que
-            les conceptions essentialistes de l’homme voyaient leur ruine, l’idée de <span style="color:#f00;">«&nbsp;condition&nbsp;»</span> remplaçant désormais celle de <span style="color:#f00;">«&nbsp;nature&nbsp;»</span>, la <span class="STDitalic">surface</span> des choses a cessé d’être pour nous le masque de leur cœur, sentiment qui préludait
-            à tous les <span style="color:#f00;">«&nbsp;au-delà&nbsp;»</span> de la métaphysique.</p>
+            les conceptions essentialistes de l’homme voyaient leur ruine, l’idée de <span class="quote" onclick="displayExtract('toDefine')">«&nbsp;condition&nbsp;»</span> remplaçant désormais celle de <span class="quote" onclick="displayExtract('toDefine')">«&nbsp;nature&nbsp;»</span>, la <span class="STDitalic">surface</span> des choses a cessé d’être pour nous le masque de leur cœur, sentiment qui préludait
+            à tous les <span class="quote" onclick="displayExtract('toDefine')">«&nbsp;au-delà&nbsp;»</span> de la métaphysique.</p>
          <p>C’est donc tout le langage littéraire qui devrait changer, qui déjà change. Nous constatons,
             de jour en jour, la répugnance croissante des plus conscients devant le mot à caractère
             viscéral, analogique ou incantatoire. Cependant que l’adjectif optique, descriptif,
             celui qui se contente de mesurer, de situer, de limiter, de définir, montre probablement
             le chemin difficile d’un nouvel art romanesque.</p>
       </article>
+      <section class="extract_section">
+         <p>Some text here.</p>
+         <div id="pr_02_01" class="extractHide">
+            <p><span class="STDsmall STDgray">[10] </span>[...] Ces gens-là j'ai essayé de les aimer, ils ont <span class="STDsmall STDgray">[11] </span>parfois un air qui trompe mais bien vite si tu leur parle de toi ils t'injurient,
+               ton chagrin leur fait horreur.</p>
+            <p>On m'a piqué avec une longue aiguille, c'est la vérité. Cette aiguille ellle m'est
+               restée vivante. Quand on commence une histoire le mieux est de dire je suis né, c'est
+               le meilleur départ car les enfances sont plus nombreuses à mesure qu'on grandit, ,
+               elles se multiplient et voilà déjà une cause de confusion. J'ai le cœur gros de commencements
+               toujours râtés. Et le but aussi, je n'en ai point.</p>
+            <p><span class="STDitalic">Le Renard et la boussole</span>, Pinget Robert, Paris, Les Éditions de Minuit, [1953] 2000.</p>
+         </div>
+         <div id="pr_02_ToDefine" class="extractHide">
+            <p></p>
+            <p><span class="STDsmall STDgray">[16] </span>[...] Je me demande souvent si les esprits brillants existeraient sans leur mémoire,
+               je n'ai aucune mémoire, je voudrais pour n'être pas ridicule vivre dans un mon d'où
+               elle serait exclue, on ne pourrait partler que des choses du jour, et on inventerait,
+               on inventerait au fur et à mesure, c'est ça la vraie vie.</p>
+            <p>La naissance d'un objet, j'ai remarqué, n'a pas lieu aujourd'hui, il y a du mouvement
+               tout autour qui l'empêche de montrer la tête et demain tu t'avises qu'il existe. Par
+               conséquent la meilleure explication des origines serait de commencer par des bruits
+               de bouches et de glisser progressivement vers des paroles articulées jusqu'au moment
+               où l'auditeur sans se poser aucune question participe à ton histoire.</p>
+            <p><span class="STDitalic">Le Renard et la boussole</span>, Pinget Robert, Paris, Les Éditions de Minuit, [1953] 2000.</p>
+         </div>
+         <p>
+            Some text here.</p>
+      </section>
       <footer><a href="https://www.univ-lille.fr/" target="blanck"><img src="img/logo_u_lille.png" alt="logo université de lille">"</a></footer>
    </body>
 </html>
