--- a/04_livrable/website/punr/punr_ch05.html
+++ b/04_livrable/website/punr/punr_ch05.html
@@ -9,9 +9,7 @@
       <meta charset="utf-8">
       <meta name="author" content="adrien mevel, mathieu marchal, florence de chalonge, alain robbe-grillet">
       <meta name="description" content="digital critical edition of pour un nouveau roman by alain robbe-grillet fist published in 1963 this word has been realised as student project">
-      <meta name="keywords" content="critical, edition, digital, robbe-grillet, litterature, french, 1963, nouveau roman, alain robbe-grillet, pour un nouveau roman, xxe siecle, xx, franch theory">
-      <link rel="javascript" src="punr_script.js">
-   </head>
+      <meta name="keywords" content="critical, edition, digital, robbe-grillet, litterature, french, 1963, nouveau roman, alain robbe-grillet, pour un nouveau roman, xxe siecle, xx, franch theory"><script src="script.js"></script></head>
    <body>
       <header id="top">
          <h1>Pour un nouveau roman</h1>
@@ -48,8 +46,8 @@
          <p>Les quelques œuvres qui vont être rapidement analysées, ou commentées, dans les pages
             qui suivent sont loin d’être les seules à avoir marqué de leurs recherches la littérature
             de cette première moitié du <span class="STDsc">xx</span><span class="STDexposant">e</span> siècle. Ce ne sont même pas toujours celles qui m’auront personnellement le plus
-            impressionné. On remarquera tout de suite l’absence, entre autres, de <span style="color:#0f0;">Kafka</span>, et la présence au contraire d’écrivains de bien moindre importance. On ne manquera
-            pas de dire aussi que <span style="color:#0f0;">Joë&nbsp;Bousquet</span> a des côtés très démodés, et que <span class="STDitalic">Godot</span> est trop à la mode, et que souvent ce ne sont pas les ouvrages les plus accomplis
+            impressionné. On remarquera tout de suite l’absence, entre autres, de <span class="ref">Kafka</span>, et la présence au contraire d’écrivains de bien moindre importance. On ne manquera
+            pas de dire aussi que <span class="ref">Joë&nbsp;Bousquet</span> a des côtés très démodés, et que <span class="STDitalic">Godot</span> est trop à la mode, et que souvent ce ne sont pas les ouvrages les plus accomplis
             qui ont été choisis pour représenter les auteurs retenus.</p>
          <p>Tout cela est vrai. C’est que les cinq brefs essais reproduits ici seront pour moi
             surtout des exemples, qui me permettront chacun de préciser quelques thèmes et formes
@@ -58,6 +56,34 @@
             notre après-guerre. Tous offrent, de mon point de vue, quelque chose de profondément actuel&nbsp;; c’est ce quelque chose que j’essaie ici de dégager, et qu’il ne
             serait pas difficile de retrouver dans la plupart des recherches contemporaines.</p>
       </article>
+      <section class="extract_section">
+         <p>Some text here.</p>
+         <div id="pr_02_01" class="extractHide">
+            <p><span class="STDsmall STDgray">[10] </span>[...] Ces gens-là j'ai essayé de les aimer, ils ont <span class="STDsmall STDgray">[11] </span>parfois un air qui trompe mais bien vite si tu leur parle de toi ils t'injurient,
+               ton chagrin leur fait horreur.</p>
+            <p>On m'a piqué avec une longue aiguille, c'est la vérité. Cette aiguille ellle m'est
+               restée vivante. Quand on commence une histoire le mieux est de dire je suis né, c'est
+               le meilleur départ car les enfances sont plus nombreuses à mesure qu'on grandit, ,
+               elles se multiplient et voilà déjà une cause de confusion. J'ai le cœur gros de commencements
+               toujours râtés. Et le but aussi, je n'en ai point.</p>
+            <p><span class="STDitalic">Le Renard et la boussole</span>, Pinget Robert, Paris, Les Éditions de Minuit, [1953] 2000.</p>
+         </div>
+         <div id="pr_02_ToDefine" class="extractHide">
+            <p></p>
+            <p><span class="STDsmall STDgray">[16] </span>[...] Je me demande souvent si les esprits brillants existeraient sans leur mémoire,
+               je n'ai aucune mémoire, je voudrais pour n'être pas ridicule vivre dans un mon d'où
+               elle serait exclue, on ne pourrait partler que des choses du jour, et on inventerait,
+               on inventerait au fur et à mesure, c'est ça la vraie vie.</p>
+            <p>La naissance d'un objet, j'ai remarqué, n'a pas lieu aujourd'hui, il y a du mouvement
+               tout autour qui l'empêche de montrer la tête et demain tu t'avises qu'il existe. Par
+               conséquent la meilleure explication des origines serait de commencer par des bruits
+               de bouches et de glisser progressivement vers des paroles articulées jusqu'au moment
+               où l'auditeur sans se poser aucune question participe à ton histoire.</p>
+            <p><span class="STDitalic">Le Renard et la boussole</span>, Pinget Robert, Paris, Les Éditions de Minuit, [1953] 2000.</p>
+         </div>
+         <p>
+            Some text here.</p>
+      </section>
       <footer><a href="https://www.univ-lille.fr/" target="blanck"><img src="img/logo_u_lille.png" alt="logo université de lille">"</a></footer>
    </body>
 </html>
