--- a/04_livrable/website/punr/punr_ch06.html
+++ b/04_livrable/website/punr/punr_ch06.html
@@ -9,9 +9,7 @@
       <meta charset="utf-8">
       <meta name="author" content="adrien mevel, mathieu marchal, florence de chalonge, alain robbe-grillet">
       <meta name="description" content="digital critical edition of pour un nouveau roman by alain robbe-grillet fist published in 1963 this word has been realised as student project">
-      <meta name="keywords" content="critical, edition, digital, robbe-grillet, litterature, french, 1963, nouveau roman, alain robbe-grillet, pour un nouveau roman, xxe siecle, xx, franch theory">
-      <link rel="javascript" src="punr_script.js">
-   </head>
+      <meta name="keywords" content="critical, edition, digital, robbe-grillet, litterature, french, 1963, nouveau roman, alain robbe-grillet, pour un nouveau roman, xxe siecle, xx, franch theory"><script src="script.js"></script></head>
    <body>
       <header id="top">
          <h1>Pour un nouveau roman</h1>
@@ -45,23 +43,23 @@
       <div class="following"><a href="punr_ch07.html">&gt;</a></div>
       <article>
          <h4>Énigmes et transparence chez Raymond&nbsp;Roussel <br><span class="STDsmall">(1963)</span></h4>
-         <p><span style="color:#0f0;">Raymond&nbsp;Roussel</span> décrit&nbsp;; et, au-delà de ce qu’il décrit, il n’y a rien, rien de ce qui peut traditionnellement
+         <p><span class="ref">Raymond&nbsp;Roussel</span> décrit&nbsp;; et, au-delà de ce qu’il décrit, il n’y a rien, rien de ce qui peut traditionnellement
             s’appeler un message. Pour reprendre une des expressions favorites de la critique
-            littéraire académique, <span style="color:#0f0;">Roussel</span> ne semble guère avoir <span style="color:#f00;">«&nbsp;quelque chose à dire&nbsp;»</span>. Aucune transcendance, aucun dépassement humaniste, ne peuvent s’appliquer aux séries
+            littéraire académique, <span class="ref">Roussel</span> ne semble guère avoir <span class="quote" onclick="displayExtract('toDefine')">«&nbsp;quelque chose à dire&nbsp;»</span>. Aucune transcendance, aucun dépassement humaniste, ne peuvent s’appliquer aux séries
             d’objets, de gestes et d’événements qui constituent, dès la première vue, son univers.</p>
          <p>Il arrive que, pour les besoins d’une ligne descriptive très stricte, il ait à nous
             conter quelque anecdote psychologique, ou bien quelque coutume religieuse imaginaire,
             un récit de mœurs primitives, une allégorie métaphysique... Mais ces éléments n’ont
-            jamais aucun <span style="color:#f00;">«&nbsp;contenu&nbsp;»</span>, aucune profondeur, ils ne peuvent constituer en aucun cas le plus modeste apport
+            jamais aucun <span class="quote" onclick="displayExtract('toDefine')">«&nbsp;contenu&nbsp;»</span>, aucune profondeur, ils ne peuvent constituer en aucun cas le plus modeste apport
             à l’étude des caractères humains ou des passions, la plus petite contribution à la
             sociologie, la moindre méditation philosophique. Il s’agit toujours en effet de sentiments
             ouvertement conventionnels (amour filial, dévouement, grandeur d’âme, traîtrise, et
-            toujours traités à la manière des images d’Épinal), ou bien de rites <span style="color:#f00;">«&nbsp;gratuits&nbsp;»</span>, ou de symbolismes reconnus et de philosophies usées. Entre le non-sens absolu et
+            toujours traités à la manière des images d’Épinal), ou bien de rites <span class="quote" onclick="displayExtract('toDefine')">«&nbsp;gratuits&nbsp;»</span>, ou de symbolismes reconnus et de philosophies usées. Entre le non-sens absolu et
             le sens épuisé il ne reste encore une fois que les choses elles-mêmes, objets, gestes,
             etc.</p>
-         <p>Sur le plan du langage, <span style="color:#0f0;">Roussel</span> ne répond guère mieux aux exigences de la critique. Beaucoup l’ont déjà signalé,
-            et bien entendu pour s’en plaindre&nbsp;: <span style="color:#0f0;">Raymond&nbsp;Roussel</span> écrit mal. Son style est terne et neutre. Lorsqu’il sort de l’ordre du constat&nbsp;–&nbsp;c’est-à-dire
-            de la platitude avouée&nbsp;: le domaine du <span style="color:#f00;">«&nbsp;il y a&nbsp;»</span> et du <span style="color:#f00;">«&nbsp;se trouve placé à une certaine distance&nbsp;»</span>&nbsp;–, c’est toujours pour tomber dans l’image banale, dans la métaphore la plus rebattue,
+         <p>Sur le plan du langage, <span class="ref">Roussel</span> ne répond guère mieux aux exigences de la critique. Beaucoup l’ont déjà signalé,
+            et bien entendu pour s’en plaindre&nbsp;: <span class="ref">Raymond&nbsp;Roussel</span> écrit mal. Son style est terne et neutre. Lorsqu’il sort de l’ordre du constat&nbsp;–&nbsp;c’est-à-dire
+            de la platitude avouée&nbsp;: le domaine du <span class="quote" onclick="displayExtract('toDefine')">«&nbsp;il y a&nbsp;»</span> et du <span class="quote" onclick="displayExtract('toDefine')">«&nbsp;se trouve placé à une certaine distance&nbsp;»</span>&nbsp;–, c’est toujours pour tomber dans l’image banale, dans la métaphore la plus rebattue,
             sortie elle aussi de quelque arsenal des conventions littéraires. Enfin l’organisation
             sonore des phrases, le rythme des mots, leur musique ne semblent poser pour l’auteur
             aucun problème d’oreille. Le résultat est presque continuellement sans attrait du
@@ -69,7 +67,7 @@
             enchevêtrements cacophoniques, des vers où il faut compter sur ses doigts pour s’apercevoir
             que les alexandrins ont vraiment douze pieds.</p>
          <p>Nous voici donc en présence de l’envers parfait de ce qu’il est convenu d’appeler
-            un bon écrivain&nbsp;: <span style="color:#0f0;">Raymond&nbsp;Roussel</span> n’a rien à dire et il le dit mal... Et pourtant son œuvre commence à être reconnue
+            un bon écrivain&nbsp;: <span class="ref">Raymond&nbsp;Roussel</span> n’a rien à dire et il le dit mal... Et pourtant son œuvre commence à être reconnue
             par tous comme l’une des plus importantes de la littérature française au début de
             ce siècle, une de celles qui ont exercé leur fascination sur plusieurs générations
             d’écrivains et d’artistes, une de celles, sans aucun doute, que l’on doit compter
@@ -115,10 +113,11 @@
             nous explique ensuite longuement la signification (toujours <span class="STDitalic">immédiate,</span> au ras des mots) de la phrase-devinette, et comment elle se rapporte directement
             à la statue, dont les détails étranges se révèlent alors comme tout à fait nécessaires,
             etc. Or ces élucidations en chaîne, extraordinairement complexes, ingénieuses, et
-            <span style="color:#f00;">«&nbsp;tirées par les cheveux&nbsp;»</span>, paraissent si dérisoires, si décevantes, que c’est comme si le mystère demeurait
+            <span class="quote" onclick="displayExtract('toDefine')">«&nbsp;tirées par les cheveux&nbsp;»</span>, paraissent si dérisoires, si décevantes, que c’est comme si le mystère demeurait
             intact. Mais c’est désormais un mystère lavé, vidé, qui est devenu innommable. L’opacité
             ne cache plus rien. On a l’impression d’avoir trouvé un tiroir fermé, puis une clef&nbsp;;
             et cette clef ouvre le tiroir de façon impeccable... et le tiroir est vide.</p>
+         <div class="smallgap"></div>
          <p>Quelles sont donc alors ces formes qui nous passionnent&nbsp;? Et comment agissent-elles
             sur nous&nbsp;? Quelle est leur signification&nbsp;? Aux deux dernières questions, il est sans
             doute encore trop tôt pour répondre. Les formes rousseliennes ne sont pas encore devenues
@@ -129,7 +128,7 @@
             un chemin logique qui conduit d’un état donné à un autre état –&nbsp;ressemblant beaucoup
             au premier, bien qu’il soit atteint par un long détour. On en trouve un nouvel exemple&nbsp;–&nbsp;et
             qui a l’avantage supplémentaire de se situer entièrement dans le domaine du langage&nbsp;–&nbsp;avec les courts récits posthumes dont
-            <span style="color:#0f0;">Roussel</span> a lui-même expliqué l’architecture&nbsp;: deux phrases qui se prononcent de façon identique,
+            <span class="ref">Roussel</span> a lui-même expliqué l’architecture&nbsp;: deux phrases qui se prononcent de façon identique,
             à une lettre près, mais dont les sens sont totalement sans rapport, à cause des acceptions
             différentes dans lesquelles sont pris les mots semblables. Le trajet, c’est ici l’histoire,
             l’anecdote, permettant de réunir les deux phrases, qui constitueront, l’une les premiers
@@ -137,10 +136,10 @@
             par leur fonction d’ustensiles, de véhicules, d’intermédiaires&nbsp;; l’anecdote n’a ouvertement
             plus de contenu, mais un mouvement, un ordre, une composition&nbsp;; elle n’est plus, elle
             aussi, qu’une mécanique&nbsp;: à la fois machine à reproduire et machine à modifier.</p>
-         <p>Car il faut insister sur l’importance que <span style="color:#0f0;">Roussel</span> attache à cette très légère <span class="STDitalic">modification</span> de son séparant les deux phrases-clefs, sans parler de la modification générale du
+         <p>Car il faut insister sur l’importance que <span class="ref">Roussel</span> attache à cette très légère <span class="STDitalic">modification</span> de son séparant les deux phrases-clefs, sans parler de la modification générale du
             sens. Le récit a opéré sous nos yeux, d’une part un changement profond de ce que signifie
             le monde&nbsp;–&nbsp;et le langage&nbsp;–, d’autre part un infime décalage superficiel (la lettre
-            altérée)&nbsp;; le texte <span style="color:#f00;">«&nbsp;se mord la queue&nbsp;»</span>, mais avec une petite irrégularité, une petite entorse... et qui change tout.</p>
+            altérée)&nbsp;; le texte <span class="quote" onclick="displayExtract('toDefine')">«&nbsp;se mord la queue&nbsp;»</span>, mais avec une petite irrégularité, une petite entorse... et qui change tout.</p>
          <p>Fréquemment aussi, nous trouvons la simple <span class="STDitalic">reproduction</span> plastique, comme cette mosaïque que dessine la hie déjà citée. Les exemples abondent,
             que ce soit dans les romans, les pièces ou les poèmes, de ces images de toutes sortes&nbsp;:
             statues, gravures, tableaux, ou même dessins grossiers sans aucun caractère artistique.
@@ -153,8 +152,8 @@
             baie passe une route&nbsp;; et sur cette route roule une voiture, et un homme est assis
             à l’intérieur de la voiture&nbsp;; cet homme tient une canne, dont le pommeau représente...,
             etc.</p>
-         <p>La <span class="STDitalic">vue,</span> sens privilégié chez <span style="color:#0f0;">Roussel</span>, atteint très vite une acuité démentielle, tendant vers l’infini. Ce caractère est
-            rendu sans doute encore plus provocant du fait qu’il s’agit d’une reproduction. <span style="color:#0f0;">Roussel</span> décrit volontiers, nous l’avons signalé, un univers qui n’est pas donné comme réel,
+         <p>La <span class="STDitalic">vue,</span> sens privilégié chez <span class="ref">Roussel</span>, atteint très vite une acuité démentielle, tendant vers l’infini. Ce caractère est
+            rendu sans doute encore plus provocant du fait qu’il s’agit d’une reproduction. <span class="ref">Roussel</span> décrit volontiers, nous l’avons signalé, un univers qui n’est pas donné comme réel,
             mais comme déjà représenté. Il aime placer un artiste intermédiaire entre lui-même
             et le monde des hommes. Le texte que l’on nous propose est une relation concernant
             un double. Le grossissement démesuré de certains éléments lointains ou minuscules
@@ -179,6 +178,34 @@
             de se reproduire, et l’enfant pour toujours tient son bâton levé au-dessus du cerceau
             qui s’incline, et l’écume de la vague immobile va retomber...</p>
       </article>
+      <section class="extract_section">
+         <p>Some text here.</p>
+         <div id="pr_02_01" class="extractHide">
+            <p><span class="STDsmall STDgray">[10] </span>[...] Ces gens-là j'ai essayé de les aimer, ils ont <span class="STDsmall STDgray">[11] </span>parfois un air qui trompe mais bien vite si tu leur parle de toi ils t'injurient,
+               ton chagrin leur fait horreur.</p>
+            <p>On m'a piqué avec une longue aiguille, c'est la vérité. Cette aiguille ellle m'est
+               restée vivante. Quand on commence une histoire le mieux est de dire je suis né, c'est
+               le meilleur départ car les enfances sont plus nombreuses à mesure qu'on grandit, ,
+               elles se multiplient et voilà déjà une cause de confusion. J'ai le cœur gros de commencements
+               toujours râtés. Et le but aussi, je n'en ai point.</p>
+            <p><span class="STDitalic">Le Renard et la boussole</span>, Pinget Robert, Paris, Les Éditions de Minuit, [1953] 2000.</p>
+         </div>
+         <div id="pr_02_ToDefine" class="extractHide">
+            <p></p>
+            <p><span class="STDsmall STDgray">[16] </span>[...] Je me demande souvent si les esprits brillants existeraient sans leur mémoire,
+               je n'ai aucune mémoire, je voudrais pour n'être pas ridicule vivre dans un mon d'où
+               elle serait exclue, on ne pourrait partler que des choses du jour, et on inventerait,
+               on inventerait au fur et à mesure, c'est ça la vraie vie.</p>
+            <p>La naissance d'un objet, j'ai remarqué, n'a pas lieu aujourd'hui, il y a du mouvement
+               tout autour qui l'empêche de montrer la tête et demain tu t'avises qu'il existe. Par
+               conséquent la meilleure explication des origines serait de commencer par des bruits
+               de bouches et de glisser progressivement vers des paroles articulées jusqu'au moment
+               où l'auditeur sans se poser aucune question participe à ton histoire.</p>
+            <p><span class="STDitalic">Le Renard et la boussole</span>, Pinget Robert, Paris, Les Éditions de Minuit, [1953] 2000.</p>
+         </div>
+         <p>
+            Some text here.</p>
+      </section>
       <footer><a href="https://www.univ-lille.fr/" target="blanck"><img src="img/logo_u_lille.png" alt="logo université de lille">"</a></footer>
    </body>
 </html>
