--- a/04_livrable/website/punr/punr_ch07.html
+++ b/04_livrable/website/punr/punr_ch07.html
@@ -9,9 +9,7 @@
       <meta charset="utf-8">
       <meta name="author" content="adrien mevel, mathieu marchal, florence de chalonge, alain robbe-grillet">
       <meta name="description" content="digital critical edition of pour un nouveau roman by alain robbe-grillet fist published in 1963 this word has been realised as student project">
-      <meta name="keywords" content="critical, edition, digital, robbe-grillet, litterature, french, 1963, nouveau roman, alain robbe-grillet, pour un nouveau roman, xxe siecle, xx, franch theory">
-      <link rel="javascript" src="punr_script.js">
-   </head>
+      <meta name="keywords" content="critical, edition, digital, robbe-grillet, litterature, french, 1963, nouveau roman, alain robbe-grillet, pour un nouveau roman, xxe siecle, xx, franch theory"><script src="script.js"></script></head>
    <body>
       <header id="top">
          <h1>Pour un nouveau roman</h1>
@@ -61,7 +59,7 @@
             s’il collectionne les médicaments&nbsp;–&nbsp;ou même les absorbe parfois&nbsp;–&nbsp;ce n’est guère dans une intention à proprement parler thérapeutique&nbsp;;
             bien entendu, il se moque autant de la psychanalyse que des traitements par l’électricité
             ou la gymnastique. Dès les premiers feuillets nous trouvons sa profession de foi&nbsp;:
-            <span style="color:#f00;">«&nbsp;La maladie est une conviction et je suis né avec cette conviction.&nbsp;»</span> Quelque chose, en somme, comme la grâce.</p>
+            <span class="quote" onclick="displayExtract('toDefine')">«&nbsp;La maladie est une conviction et je suis né avec cette conviction.&nbsp;»</span> Quelque chose, en somme, comme la grâce.</p>
          <p>La nature exacte et l’importance exclusive de cette conviction, voilà ce que son récit
             tente d’éclaircir en trois cent cinquante pages de grand format. L’univers dans lequel
             il nous plonge, à la fois grotesque, fantastique et parfaitement quotidien, atteint
@@ -70,7 +68,7 @@
             du repliement sur soi. Son état ne peut inspirer ni l’incrédulité ni l’irritation&nbsp;;
             il est évident, nécessaire, incurable. À l’inverse de la complaisance morbide, où
             le malade s’installe dans ses douleurs comme dans une sorte de confort, il s’agit
-            au contraire ici d’une lutte de chaque seconde pour conquérir la <span style="color:#f00;">«&nbsp;bonne santé&nbsp;»</span>, considérée comme le bien suprême, qui s’accompagne en même temps d’une entière sérénité
+            au contraire ici d’une lutte de chaque seconde pour conquérir la <span class="quote" onclick="displayExtract('toDefine')">«&nbsp;bonne santé&nbsp;»</span>, considérée comme le bien suprême, qui s’accompagne en même temps d’une entière sérénité
             intérieure&nbsp;–&nbsp;harmonie de l’âme, bonté, pureté, <span class="STDitalic">innocence</span>&nbsp;–&nbsp;et de manifestations externes de caractère plus pratique&nbsp;: l’élégance, la désinvolture,
             la ruse, la réussite en affaires, la faculté de séduire les femmes et de bien jouer
             du violon&nbsp;–&nbsp;au lieu de ne tirer de celui-ci que des grincements horribles, comme du
@@ -80,7 +78,7 @@
             pour les autres.</p>
          <p>Ainsi en va-t-il en particulier des rapports avec le temps. Le temps de Zeno est un
             temps malade. C’est pour cette raison qu’entre autres calamités il ne peut jouer bien
-            d’aucun instrument de musique&nbsp;: <span style="color:#f00;">«&nbsp;L’être le plus bas, quand il sait ce que sont les tierces, les quartes, les sixtes,
+            d’aucun instrument de musique&nbsp;: <span class="quote" onclick="displayExtract('toDefine')">«&nbsp;L’être le plus bas, quand il sait ce que sont les tierces, les quartes, les sixtes,
                sait également passer de l’une à l’autre... Mais moi, quand j’ai produit une de ces
                figures, je ne puis plus m’en libérer&nbsp;; elle adhère à moi, elle contamine la figure
                suivante et la déforme.&nbsp;»</span> Lorsque dans une conversation il prononce une phrase, la plus simple soit-elle, il
@@ -89,13 +87,13 @@
             il les perd à calculer qu’il n’aurait pas eu besoin de plus pour le mener à bien.
             Il décide de ne plus fumer, parce que le tabac est cause de tous ses maux&nbsp;; aussitôt
             son temps se voit divisé et dévoré par les dates successives et toujours reculées
-            de la <span style="color:#f00;">«&nbsp;dernière cigarette&nbsp;»</span>, qu’il inscrit à l’avance sur les murs de sa chambre&nbsp;–&nbsp;de sorte que, les murs en
+            de la <span class="quote" onclick="displayExtract('toDefine')">«&nbsp;dernière cigarette&nbsp;»</span>, qu’il inscrit à l’avance sur les murs de sa chambre&nbsp;–&nbsp;de sorte que, les murs en
             étant couverts, il doit bientôt déménager. Mais au milieu de l’engluement la mort
             frappe autour de lui amis et parents, et chaque fois il se trouve pris au dépourvu,
             comprenant soudain qu’il ne pourra plus jamais leur prouver sa bonne volonté et son
             innocence.</p>
          <p>Zeno ne fait pas étalage de sa maladie. Il essaie de ne pas en parler, de se comporter
-            comme tout le monde dans la mesure du possible. Même, il a <span style="color:#f00;">«&nbsp;pris définitivement les dehors d’un homme joyeux&nbsp;»</span>. De la table familiale, où il arrive à l’heure en bon époux, au bureau où il tient
+            comme tout le monde dans la mesure du possible. Même, il a <span class="quote" onclick="displayExtract('toDefine')">«&nbsp;pris définitivement les dehors d’un homme joyeux&nbsp;»</span>. De la table familiale, où il arrive à l’heure en bon époux, au bureau où il tient
             avec zèle un emploi non rétribué de comptable, de la Lloyd à la Bourse, du lit de
             sa maîtresse à la maison de beaux-parents qui l’estiment, nous suivons avidement les
             déambulations de ce chasseur qui se traque lui-même sans merci. Et nous le plaçons
@@ -108,33 +106,33 @@
             côté parce qu’un autre l’a représenté sur une caricature transpercé par son parapluie),
             et dont il souffre ensuite pour le restant de ses jours, sont proches parentes de
             celles du capitaine Achab, qui a perdu sa jambe dans la lutte contre la baleine blanche,
-            ou de <span style="color:#f00;">Molloy</span> que la paralysie gagne progressivement depuis le pied. Sa mort, Zeno la connaît d’avance&nbsp;:
+            ou de <span class="quote" onclick="displayExtract('toDefine')">Molloy</span> que la paralysie gagne progressivement depuis le pied. Sa mort, Zeno la connaît d’avance&nbsp;:
             elle commencera par la gangrène des membres inférieurs. Il n’est pas jusqu’à cette
-            ville <span style="color:#f00;">«&nbsp;irrédente&nbsp;»</span> de Trieste, où l’on ne parle pas l’italien mais un dialecte mêlé d’allemand et de
-            croate, qui ne fasse songer au Prague germano-tchèque de <span style="color:#0f0;">Kafka</span> et au Dublin anglo-irlandais de <span style="color:#0f0;">Joyce</span>&nbsp;–&nbsp;patries de tous ceux qui ne sont pas à l’aise dans leur propre langue. <span style="color:#f00;">«&nbsp;Une confession <a id="page_99"></a>écrite est toujours mensongère, et nous (les Triestins), c’est à chaque mot toscan
+            ville <span class="quote" onclick="displayExtract('toDefine')">«&nbsp;irrédente&nbsp;»</span> de Trieste, où l’on ne parle pas l’italien mais un dialecte mêlé d’allemand et de
+            croate, qui ne fasse songer au Prague germano-tchèque de <span class="ref">Kafka</span> et au Dublin anglo-irlandais de <span class="ref">Joyce</span>&nbsp;–&nbsp;patries de tous ceux qui ne sont pas à l’aise dans leur propre langue. <span class="quote" onclick="displayExtract('toDefine')">«&nbsp;Une confession <a id="page_99"></a>écrite est toujours mensongère, et nous (les Triestins), c’est à chaque mot toscan
                que nous mentons&nbsp;!&nbsp;»</span></p>
          <p>Par surcroît, le narrateur est de mauvaise foi. En présentant son récit, le psychanalyste
             précise qu’il contient une bonne quantité de mensonges. Zeno lui-même en signale quelques-uns
             au passage. Mais comment traiter ici quoi que ce soit de mensonge, puisque chaque
             événement est accompagné d’une longue analyse qui le discrédite et le nie&nbsp;? Un jour
             qu’il n’a pas réussi par cette méthode à embrouiller suffisamment la situation, Zeno
-            déclare&nbsp;: <span style="color:#f00;">«&nbsp;Elle était si claire que je n’y comprenais plus rien.&nbsp;»</span> Après avoir accumulé les indices d’un classique complexe d’Œdipe avec transferts
+            déclare&nbsp;: <span class="quote" onclick="displayExtract('toDefine')">«&nbsp;Elle était si claire que je n’y comprenais plus rien.&nbsp;»</span> Après avoir accumulé les indices d’un classique complexe d’Œdipe avec transferts
             multiples, il entre en fureur contre le médecin qui n’a pu éviter de le remarquer&nbsp;;
             puis il rajoute exprès, à l’appui de cette thèse, quelques éléments faux. Il opère
-            de façon analogue dans ses relations avec ses amis ou sa famille&nbsp;: <span style="color:#f00;">«&nbsp;Si je n’avais pas tout défiguré, j’aurais jugé inutile d’ouvrir la bouche.&nbsp;»</span> À la fin, il découvre que son analyse est capable de convertir la santé en maladie&nbsp;;
+            de façon analogue dans ses relations avec ses amis ou sa famille&nbsp;: <span class="quote" onclick="displayExtract('toDefine')">«&nbsp;Si je n’avais pas tout défiguré, j’aurais jugé inutile d’ouvrir la bouche.&nbsp;»</span> À la fin, il découvre que son analyse est capable de convertir la santé en maladie&nbsp;;
             qu’à cela ne tienne&nbsp;: il décide alors qu’il faut soigner la bonne santé.</p>
          <p>Cette bonne santé qu’il veut soigner&nbsp;–&nbsp;ou cette mauvaise santé&nbsp;–&nbsp;cette <span class="STDitalic">conscience</span> comme l’indique le titre de l’ouvrage, il finit par l’appeler tout simplement la
-            <span style="color:#f00;">«&nbsp;vie&nbsp;»</span>, qui, <span style="color:#f00;">«&nbsp;à la différence des autres maladies, est toujours mortelle&nbsp;»</span>.</p>
+            <span class="quote" onclick="displayExtract('toDefine')">«&nbsp;vie&nbsp;»</span>, qui, <span class="quote" onclick="displayExtract('toDefine')">«&nbsp;à la différence des autres maladies, est toujours mortelle&nbsp;»</span>.</p>
          <p>La guerre éclate entre l’Italie et l’Autriche. Paradoxalement, le héros prétend découvrir
             son équilibre dans les transactions commerciales effrénées auxquelles l’extension
             du conflit ouvre la porte. Et le livre s’achève sur une étonnante note d’espoir&nbsp;:
-            un jour, un homme <span style="color:#f00;">«&nbsp;fait comme les autres, mais un peu plus malade&nbsp;»</span>, déposera un explosif d’une puissance encore inconnue au centre de la terre. <span style="color:#f00;">«&nbsp;Une détonation formidable que nul n’entendra&nbsp;–&nbsp;et la terre, revenue à l’état de
+            un jour, un homme <span class="quote" onclick="displayExtract('toDefine')">«&nbsp;fait comme les autres, mais un peu plus malade&nbsp;»</span>, déposera un explosif d’une puissance encore inconnue au centre de la terre. <span class="quote" onclick="displayExtract('toDefine')">«&nbsp;Une détonation formidable que nul n’entendra&nbsp;–&nbsp;et la terre, revenue à l’état de
                nébuleuse, continuera sa course dans les cieux délivrée des hommes&nbsp;–&nbsp;sans parasites,
                sans maladies.&nbsp;»</span></p>
          <p>Temps malade, langage malade, libido malade, démarche malade, vie malade, conscience
             malade..., il ne faut bien évidemment pas voir là-dedans une vague allégorie sur la
             faute originelle, ou quelque autre lamentation métaphysique. Il s’agit de vie quotidienne
-            et d’expérience directe du monde. Ce que nous dit ainsi <span style="color:#0f0;">Italo&nbsp;Svevo</span>, c’est que, dans notre société moderne, plus rien n’est <span class="STDitalic">naturel</span>. Et il n’y a même pas de raison pour s’en affliger. Nous pouvons parfaitement être
+            et d’expérience directe du monde. Ce que nous dit ainsi <span class="ref">Italo&nbsp;Svevo</span>, c’est que, dans notre société moderne, plus rien n’est <span class="STDitalic">naturel</span>. Et il n’y a même pas de raison pour s’en affliger. Nous pouvons parfaitement être
             joyeux, parler, faire l’amour, faire des affaires, faire la guerre, écrire des romans&nbsp;;
             mais rien de cela ne se fera plus sans y penser, comme on respire. Chacune de nos
             actions se réfléchit sur elle-même et se charge de questions. Sous notre regard, le
@@ -143,6 +141,34 @@
             esprit n’est plus celui des horloges&nbsp;; et l’écriture romanesque, à son tour, ne peut
             plus être innocente.</p>
       </article>
+      <section class="extract_section">
+         <p>Some text here.</p>
+         <div id="pr_02_01" class="extractHide">
+            <p><span class="STDsmall STDgray">[10] </span>[...] Ces gens-là j'ai essayé de les aimer, ils ont <span class="STDsmall STDgray">[11] </span>parfois un air qui trompe mais bien vite si tu leur parle de toi ils t'injurient,
+               ton chagrin leur fait horreur.</p>
+            <p>On m'a piqué avec une longue aiguille, c'est la vérité. Cette aiguille ellle m'est
+               restée vivante. Quand on commence une histoire le mieux est de dire je suis né, c'est
+               le meilleur départ car les enfances sont plus nombreuses à mesure qu'on grandit, ,
+               elles se multiplient et voilà déjà une cause de confusion. J'ai le cœur gros de commencements
+               toujours râtés. Et le but aussi, je n'en ai point.</p>
+            <p><span class="STDitalic">Le Renard et la boussole</span>, Pinget Robert, Paris, Les Éditions de Minuit, [1953] 2000.</p>
+         </div>
+         <div id="pr_02_ToDefine" class="extractHide">
+            <p></p>
+            <p><span class="STDsmall STDgray">[16] </span>[...] Je me demande souvent si les esprits brillants existeraient sans leur mémoire,
+               je n'ai aucune mémoire, je voudrais pour n'être pas ridicule vivre dans un mon d'où
+               elle serait exclue, on ne pourrait partler que des choses du jour, et on inventerait,
+               on inventerait au fur et à mesure, c'est ça la vraie vie.</p>
+            <p>La naissance d'un objet, j'ai remarqué, n'a pas lieu aujourd'hui, il y a du mouvement
+               tout autour qui l'empêche de montrer la tête et demain tu t'avises qu'il existe. Par
+               conséquent la meilleure explication des origines serait de commencer par des bruits
+               de bouches et de glisser progressivement vers des paroles articulées jusqu'au moment
+               où l'auditeur sans se poser aucune question participe à ton histoire.</p>
+            <p><span class="STDitalic">Le Renard et la boussole</span>, Pinget Robert, Paris, Les Éditions de Minuit, [1953] 2000.</p>
+         </div>
+         <p>
+            Some text here.</p>
+      </section>
       <footer><a href="https://www.univ-lille.fr/" target="blanck"><img src="img/logo_u_lille.png" alt="logo université de lille">"</a></footer>
    </body>
 </html>
