--- a/04_livrable/website/punr/punr_ch10.html
+++ b/04_livrable/website/punr/punr_ch10.html
@@ -9,9 +9,7 @@
       <meta charset="utf-8">
       <meta name="author" content="adrien mevel, mathieu marchal, florence de chalonge, alain robbe-grillet">
       <meta name="description" content="digital critical edition of pour un nouveau roman by alain robbe-grillet fist published in 1963 this word has been realised as student project">
-      <meta name="keywords" content="critical, edition, digital, robbe-grillet, litterature, french, 1963, nouveau roman, alain robbe-grillet, pour un nouveau roman, xxe siecle, xx, franch theory">
-      <link rel="javascript" src="punr_script.js">
-   </head>
+      <meta name="keywords" content="critical, edition, digital, robbe-grillet, litterature, french, 1963, nouveau roman, alain robbe-grillet, pour un nouveau roman, xxe siecle, xx, franch theory"><script src="script.js"></script></head>
    <body>
       <header id="top">
          <h1>Pour un nouveau roman</h1>
@@ -45,11 +43,11 @@
       <div class="following"><a href="punr_ch11.html">&gt;</a></div>
       <article>
          <h4>Un roman qui s’invente lui-même<br><span class="STDsmall">(1954)</span></h4>
-         <p><span style="color:#f00;">«&nbsp;J’y pense, j’y pense, un livre quelle prétention dans un sens, mais quelle extraordinaire
-               merveille s’il est raté dans les grandes largeurs.&nbsp;»</span> Ainsi <span style="color:#0f0;">Robert&nbsp;Pinget</span> nous prévient de ses ambitions et cet écrivain honnête (l’espèce n’est pas si répandue),
+         <p><span class="quote" onclick="displayExtract('toDefine')">«&nbsp;J’y pense, j’y pense, un livre quelle prétention dans un sens, mais quelle extraordinaire
+               merveille s’il est raté dans les grandes largeurs.&nbsp;»</span> Ainsi <span class="ref">Robert&nbsp;Pinget</span> nous prévient de ses ambitions et cet écrivain honnête (l’espèce n’est pas si répandue),
             qui met tout son soin, depuis déjà quelques années, à <span class="STDitalic">rater</span> ses livres dans les grandes largeurs, est en train de passer à peu près inaperçu&nbsp;–&nbsp;même
             des spécialistes, noyés par profession dans le flot quotidien des récits linéaires,
-            et réussis&nbsp;– alors que ces livres (ceux de <span style="color:#0f0;">Pinget</span>), apparemment <span class="STDitalic">sans queue ni tête,</span> sont peut-être déjà précisément les <span style="color:#f00;">«&nbsp;extraordinaires merveilles&nbsp;»</span> annoncées.</p>
+            et réussis&nbsp;– alors que ces livres (ceux de <span class="ref">Pinget</span>), apparemment <span class="STDitalic">sans queue ni tête,</span> sont peut-être déjà précisément les <span class="quote" onclick="displayExtract('toDefine')">«&nbsp;extraordinaires merveilles&nbsp;»</span> annoncées.</p>
          <p>Il faut bien tenter d’en retracer, sinon les anecdotes –&nbsp;qui se nouent et se dissolvent
             à chaque page dans des contradictions, des variantes et des sauts périlleux où l’on
             retombe moins souvent sur les pieds que sur la tête&nbsp;–&nbsp;du moins le <span class="STDitalic">mouvement</span> qui, s’il est quelquefois difficile à saisir au milieu de ce sabotage permanent,
@@ -71,7 +69,7 @@
             sur l’autre, se détruisant mutuellement ou se rassemblant en une synthèse inattendue.</p>
          <p>Il y a là le romancier Lattirail, mademoiselle Lorpailleur, également romancière,
             le postier Sinture qui détourne et truque la correspondance, Petite-Fiente, fillette
-            perverse qui <span class="STDitalic">fait des histoires,</span> Juan <span style="color:#0f0;">Simon</span>, le patron de Mahu, le fils Pinson, Julia, etc. On ne sait pas trop déjà dans quelle mesure
+            perverse qui <span class="STDitalic">fait des histoires,</span> Juan <span class="ref">Simon</span>, le patron de Mahu, le fils Pinson, Julia, etc. On ne sait pas trop déjà dans quelle mesure
             certains d’entre eux n’ont pas été inventés par les autres. Que dire alors de la foule
             des comparses plus ou moins épisodiques, matérialisations des pensées de tel ou tel
             protagoniste, qui apparaissent et disparaissent, se transforment, se multiplient,
@@ -82,22 +80,22 @@
             drôlement tragique qui hantent cette contrée, entre Agapa et Fantoine, banlieue déraisonnable
             du réel&nbsp;? Mahu émerge d’abord péniblement de son sommeil et d’une série de quatorze
             frères du même âge&nbsp;; il pense qu’il lui faut trouver un bureau pour <span class="STDitalic">y aller,</span> comme les autres. Il emporte seulement la photo qui ornait le mur de sa chambre&nbsp;:
-            des figues –&nbsp;qui <span style="color:#f00;">«&nbsp;font le vide&nbsp;»</span> en lui quand il les regarde. Il trouve cet employeur, Juan <span style="color:#0f0;">Simon</span>, qui essaie de correspondre avec sa clientèle sans passer par le postier Sinture.
-            Petite-Fiente, la fille de Juan <span style="color:#0f0;">Simon</span>, fait semblant d’avoir été giflée par Mahu... ou de ne pas avoir été giflée, on ne
+            des figues –&nbsp;qui <span class="quote" onclick="displayExtract('toDefine')">«&nbsp;font le vide&nbsp;»</span> en lui quand il les regarde. Il trouve cet employeur, Juan <span class="ref">Simon</span>, qui essaie de correspondre avec sa clientèle sans passer par le postier Sinture.
+            Petite-Fiente, la fille de Juan <span class="ref">Simon</span>, fait semblant d’avoir été giflée par Mahu... ou de ne pas avoir été giflée, on ne
             sait pas... ou plutôt de l’avoir elle-même giflé... Le récit devient en quelques pages
             d’une complication extraordinairement inconfortable, qu’il n’est malheureusement pas
             possible d’analyser ici&nbsp;; aussi, lorsque interviennent ensuite les deux romanciers
             et le receveur des postes, qui tous les trois prétendent ouvertement <span class="STDitalic">écrire l’histoire,</span> celle-ci dépasse à l’instant avec allégresse les bornes de l’incompréhensible. En désespoir de cause,
-            Mahu rentre chez soi, débarrassé enfin&nbsp;–&nbsp;croit-il&nbsp;–&nbsp;de tout ce fatras de <span style="color:#f00;">«&nbsp;personnages mous&nbsp;»</span>. Les cent dernières pages du livre ne sont plus que du matériau à l’état brut, brefs
+            Mahu rentre chez soi, débarrassé enfin&nbsp;–&nbsp;croit-il&nbsp;–&nbsp;de tout ce fatras de <span class="quote" onclick="displayExtract('toDefine')">«&nbsp;personnages mous&nbsp;»</span>. Les cent dernières pages du livre ne sont plus que du matériau à l’état brut, brefs
             morceaux de réalité décomposée qui se révèlent au moins aussi curieux que tout ce
             qui précédait, aussi riches, aussi passionnants&nbsp;: des mots qui tombent du ciel sans
-            laisser de traces, des enfants qui parlent <span style="color:#f00;">«&nbsp;à l’envers&nbsp;»</span>, un petit bout d’oreille qui bouge près d’une colonne dans une réunion publique...
-            Il est désormais impossible de dire si <span style="color:#0f0;">Robert&nbsp;Pinget</span> est un chercheur minutieux dans son laboratoire ou un voyant qui abuse de sa drogue.
-            Le récit se clôt sur cette conclusion <span class="STDitalic">énigmatique&nbsp;:</span><span style="color:#f00;">«&nbsp;Voilà. Je n’ai plus rien à dire, néanmoins tout me demeure, j’ai gagné.&nbsp;»</span></p>
-         <p>Mais inéluctablement, pour <span style="color:#f00;">«&nbsp;l’honneur de continuer&nbsp;»</span>, voici que tout recommence. Cela s’appelle cette fois <span class="STDitalic">Le Renard et la Boussole.</span> Le nouveau roman débute dans une sorte de grisaille, au réveil comme d’habitude&nbsp;;
+            laisser de traces, des enfants qui parlent <span class="quote" onclick="displayExtract('toDefine')">«&nbsp;à l’envers&nbsp;»</span>, un petit bout d’oreille qui bouge près d’une colonne dans une réunion publique...
+            Il est désormais impossible de dire si <span class="ref">Robert&nbsp;Pinget</span> est un chercheur minutieux dans son laboratoire ou un voyant qui abuse de sa drogue.
+            Le récit se clôt sur cette conclusion <span class="STDitalic">énigmatique&nbsp;:</span><span class="quote" onclick="displayExtract('toDefine')">«&nbsp;Voilà. Je n’ai plus rien à dire, néanmoins tout me demeure, j’ai gagné.&nbsp;»</span></p>
+         <p>Mais inéluctablement, pour <span class="quote" onclick="displayExtract('toDefine')">«&nbsp;l’honneur de continuer&nbsp;»</span>, voici que tout recommence. Cela s’appelle cette fois <span class="STDitalic">Le Renard et la Boussole.</span> Le nouveau roman débute dans une sorte de grisaille, au réveil comme d’habitude&nbsp;;
             des <span class="STDitalic">possibles</span> errent dans les coins&nbsp;–&nbsp;des vies possibles, des littératures possibles... Un roman,
-            nous dit-on, cela devrait s’ouvrir sur un <span style="color:#f00;">«&nbsp;Je suis né...&nbsp;»</span>, mais quelque chose d’autre essaie de se glisser sous la plume, tourne, revient avec
-            insistance&nbsp;: <span style="color:#f00;">«&nbsp;On m’a piqué avec une longue aiguille...&nbsp;»</span> Il faut préciser&nbsp;: <span style="color:#f00;">«&nbsp;La naissance d’un objet, j’ai remarqué, n’a pas lieu aujourd’hui, il y a du mouvement
+            nous dit-on, cela devrait s’ouvrir sur un <span class="quote" onclick="displayExtract('toDefine')">«&nbsp;Je suis né...&nbsp;»</span>, mais quelque chose d’autre essaie de se glisser sous la plume, tourne, revient avec
+            insistance&nbsp;: <span class="quote" onclick="displayExtract('pr_02_01')">«&nbsp;On m’a piqué avec une longue aiguille...&nbsp;»</span> Il faut préciser&nbsp;: <span class="quote" onclick="displayExtract('toDefine')">«&nbsp;La naissance d’un objet, j’ai remarqué, n’a pas lieu aujourd’hui, il y a du mouvement
                tout autour qui l’empêche de montrer la tête et demain tu t’avises qu’il existe. Par
                conséquent la meilleure explication des origines serait de commencer par des bruits
                de bouche et de glisser progressivement vers des paroles <a id="page_139"></a>articulées jusqu’au moment où l’auditeur sans se poser aucune question participe à
@@ -110,19 +108,47 @@
             et de sultans, des rencontres plus imprévues encore&nbsp;–&nbsp;celles par exemple de Don Quichotte
             et de son désert castillan. Le documentaire traîne en longueur, dans la chaleur de
             l’été palestinien. Le narrateur s’inquiète de cette lassitude qu’il constate chez
-            le lecteur et chez lui-même, comme chez ses voyageurs&nbsp;: <span style="color:#f00;">«&nbsp;Ça ne va pas, dit-il, seraient-ils déjà revenus&nbsp;?&nbsp;»</span> Pourtant Renard et David font encore la connaissance de Marie-Madeleine, dite <span style="color:#f00;">«&nbsp;Mama&nbsp;»</span>, qui les aidera à se rembarquer, puis celle plus importante du Scribe accroupi&nbsp;:
-            <span style="color:#f00;">«&nbsp;Méfiez-vous... Ne lui parlez pas, il écrit tout.&nbsp;»</span> En effet il note aussitôt lui-même sa propre rencontre... <span style="color:#f00;">«&nbsp;Un fait, un fait entre des milliards, on leur dénie toute valeur dans la pratique,
+            le lecteur et chez lui-même, comme chez ses voyageurs&nbsp;: <span class="quote" onclick="displayExtract('toDefine')">«&nbsp;Ça ne va pas, dit-il, seraient-ils déjà revenus&nbsp;?&nbsp;»</span> Pourtant Renard et David font encore la connaissance de Marie-Madeleine, dite <span class="quote" onclick="displayExtract('toDefine')">«&nbsp;Mama&nbsp;»</span>, qui les aidera à se rembarquer, puis celle plus importante du Scribe accroupi&nbsp;:
+            <span class="quote" onclick="displayExtract('toDefine')">«&nbsp;Méfiez-vous... Ne lui parlez pas, il écrit tout.&nbsp;»</span> En effet il note aussitôt lui-même sa propre rencontre... <span class="quote" onclick="displayExtract('toDefine')">«&nbsp;Un fait, un fait entre des milliards, on leur dénie toute valeur dans la pratique,
                on les note, on les note c’est tout.&nbsp;»</span></p>
          <p>Et le plus naturellement du monde, Renard, qui s’est depuis longtemps confondu avec
             le narrateur (nommé John Tintouin Porridge), se retrouve à Fantoine. Mahu et les autres
-            lui reprochent de les avoir un instant quittés. Ne les aimait-il plus&nbsp;? <span style="color:#f00;">«&nbsp;Mais oui je vous aime, nous sommes liés pour la vie... me voici.&nbsp;»</span> Au milieu des apéritifs et des déambulations vaseuses du retour, surgit mademoiselle
+            lui reprochent de les avoir un instant quittés. Ne les aimait-il plus&nbsp;? <span class="quote" onclick="displayExtract('toDefine')">«&nbsp;Mais oui je vous aime, nous sommes liés pour la vie... me voici.&nbsp;»</span> Au milieu des apéritifs et des déambulations vaseuses du retour, surgit mademoiselle
             Lorpailleur, la romancière&nbsp;; elle demande à John où il voulait en venir. Il se rappelle
-            vaguement qu’il projetait une étude sur Marie Stuart, il a parlé des <span class="STDitalic">origines,</span><span style="color:#f00;">«&nbsp;ensuite ça a bifurqué&nbsp;»</span>. Alors elle lui donne ce conseil&nbsp;: un livre, ça se commence toujours par&nbsp;: <span style="color:#f00;">«&nbsp;Je suis né...&nbsp;»</span> Et celui-ci s’achève paradoxalement sur toute une collection de débuts possibles,
+            vaguement qu’il projetait une étude sur Marie Stuart, il a parlé des <span class="STDitalic">origines,</span><span class="quote" onclick="displayExtract('toDefine')">«&nbsp;ensuite ça a bifurqué&nbsp;»</span>. Alors elle lui donne ce conseil&nbsp;: un livre, ça se commence toujours par&nbsp;: <span class="quote" onclick="displayExtract('toDefine')">«&nbsp;Je suis né...&nbsp;»</span> Et celui-ci s’achève paradoxalement sur toute une collection de débuts possibles,
             s’ouvrant tous par ces trois mots, mais dégénérant à la fin en une cacophonie de phrases
-            sans suite, de cris, de balbutiements et autres <span style="color:#f00;">«&nbsp;bruits de bouche&nbsp;»</span>.</p>
+            sans suite, de cris, de balbutiements et autres <span class="quote" onclick="displayExtract('toDefine')">«&nbsp;bruits de bouche&nbsp;»</span>.</p>
          <p>Une fois de plus tout est à refaire. Cependant, en un sens (le seul qui nous importe),
-            <span style="color:#0f0;">Robert&nbsp;Pinget</span> a encore <span style="color:#f00;">«&nbsp;gagné&nbsp;»</span>.</p>
+            <span class="ref">Robert&nbsp;Pinget</span> a encore <span class="quote" onclick="displayExtract('toDefine')">«&nbsp;gagné&nbsp;»</span>.</p>
       </article>
+      <section class="extract_section">
+         <p>Some text here.</p>
+         <div id="pr_02_01" class="extractHide">
+            <p><span class="STDsmall STDgray">[10] </span>[...] Ces gens-là j'ai essayé de les aimer, ils ont <span class="STDsmall STDgray">[11] </span>parfois un air qui trompe mais bien vite si tu leur parle de toi ils t'injurient,
+               ton chagrin leur fait horreur.</p>
+            <p>On m'a piqué avec une longue aiguille, c'est la vérité. Cette aiguille ellle m'est
+               restée vivante. Quand on commence une histoire le mieux est de dire je suis né, c'est
+               le meilleur départ car les enfances sont plus nombreuses à mesure qu'on grandit, ,
+               elles se multiplient et voilà déjà une cause de confusion. J'ai le cœur gros de commencements
+               toujours râtés. Et le but aussi, je n'en ai point.</p>
+            <p><span class="STDitalic">Le Renard et la boussole</span>, Pinget Robert, Paris, Les Éditions de Minuit, [1953] 2000.</p>
+         </div>
+         <div id="pr_02_ToDefine" class="extractHide">
+            <p></p>
+            <p><span class="STDsmall STDgray">[16] </span>[...] Je me demande souvent si les esprits brillants existeraient sans leur mémoire,
+               je n'ai aucune mémoire, je voudrais pour n'être pas ridicule vivre dans un mon d'où
+               elle serait exclue, on ne pourrait partler que des choses du jour, et on inventerait,
+               on inventerait au fur et à mesure, c'est ça la vraie vie.</p>
+            <p>La naissance d'un objet, j'ai remarqué, n'a pas lieu aujourd'hui, il y a du mouvement
+               tout autour qui l'empêche de montrer la tête et demain tu t'avises qu'il existe. Par
+               conséquent la meilleure explication des origines serait de commencer par des bruits
+               de bouches et de glisser progressivement vers des paroles articulées jusqu'au moment
+               où l'auditeur sans se poser aucune question participe à ton histoire.</p>
+            <p><span class="STDitalic">Le Renard et la boussole</span>, Pinget Robert, Paris, Les Éditions de Minuit, [1953] 2000.</p>
+         </div>
+         <p>
+            Some text here.</p>
+      </section>
       <footer><a href="https://www.univ-lille.fr/" target="blanck"><img src="img/logo_u_lille.png" alt="logo université de lille">"</a></footer>
    </body>
 </html>
